@@ -1,3 +1,7 @@
+2012-09-08  Andreas K. Foerster  <info@akfoerster.de>
+
+	* akfavatar.h, avatar-sdl.c (avt_push_key): new function
+
 2012-09-07  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar-sdl.c (avt_push_key, avt_analyze_key)
